<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.trk.risk.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/attacker_dice_1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="50dp"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:contentDescription="@string/attackerDicePicture0"
            android:onClick="tap_dice"
            android:scaleType="fitCenter"
            android:src="@drawable/red_die_1" />

        <ImageButton
            android:id="@+id/attacker_dice_2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignStart="@+id/attacker_dice_1"
            android:layout_centerVertical="true"
            android:layout_marginTop="50dp"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:contentDescription="@string/attackerDicePicture1"
            android:onClick="tap_dice"
            android:scaleType="fitCenter"
            android:src="@drawable/red_die_1" />

        <ImageButton
            android:id="@+id/attacker_dice_3"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignBottom="@+id/linearLayout"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="50dp"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:contentDescription="@string/attackerDicePicture2"
            android:onClick="tap_dice"
            android:scaleType="fitCenter"
            android:src="@drawable/red_die_1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        android:layout_alignParentStart="true"
        android:layout_marginStart="145dp">

        <ImageButton
            android:id="@+id/defender_dice_1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="130dp"
            android:layout_toEndOf="@+id/defender_dice_1"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:contentDescription="@string/defenderDicePicture1"
            android:onClick="tap_dice"
            android:scaleType="fitCenter"
            android:src="@drawable/white_die_1" />


        <ImageButton
            android:id="@+id/defender_dice_2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout"
            android:layout_marginStart="11dp"
            android:layout_marginTop="130dp"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:contentDescription="@string/defenderDicePicture0"
            android:onClick="tap_dice"
            android:scaleType="fitCenter"
            android:src="@drawable/white_die_1" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Attacking Soldiers"
        android:id="@+id/textView"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Defending Soldiers"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Attack: "
        android:id="@+id/textView3"
        android:layout_marginBottom="28dp"
        android:layout_above="@+id/button"
        android:layout_alignEnd="@+id/linearLayout2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:onClick="startTheGameAlready" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Defense:"
        android:id="@+id/textView4"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/linearLayout2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="0"
        android:id="@+id/numberOfAttackingSoldiers"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="0"
        android:id="@+id/numberOfDefendingSoldiers"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignStart="@+id/numberOfAttackingSoldiers" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/initialAttackerNumber"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toEndOf="@+id/textView3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/initialDefenderNumber"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:layout_alignTop="@+id/button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/result"
        android:layout_above="@+id/initialAttackerNumber"
        android:layout_toStartOf="@+id/textView4" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/attackingProgress"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/numberOfAttackingSoldiers" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/defendingProgress"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/numberOfDefendingSoldiers" />

</RelativeLayout>